WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118131
[WinCairo] Compilation error.
https://bugs.webkit.org/show_bug.cgi?id=118131
Summary
[WinCairo] Compilation error.
peavo
Reported
2013-06-27 06:48:23 PDT
The symbol IAccessibilityDelegate is not declared before used in WebKit/win/WebView.h.
Attachments
Patch
(2.15 KB, patch)
2013-06-27 06:58 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from APPLE-EWS-2 for win-future
(813.15 KB, application/zip)
2013-06-27 11:35 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-06-27 06:58:27 PDT
Created
attachment 205600
[details]
Patch
Build Bot
Comment 2
2013-06-27 11:35:16 PDT
Comment on
attachment 205600
[details]
Patch
Attachment 205600
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/981539
New failing tests: fast/js/global-constructors-attributes-shared-worker.html fast/js/global-constructors-attributes-dedicated-worker.html
Build Bot
Comment 3
2013-06-27 11:35:17 PDT
Created
attachment 205621
[details]
Archive of layout-test-results from APPLE-EWS-2 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-2 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Brent Fulgham
Comment 4
2013-06-28 08:50:23 PDT
Comment on
attachment 205600
[details]
Patch r=me.
WebKit Commit Bot
Comment 5
2013-06-28 09:08:14 PDT
Comment on
attachment 205600
[details]
Patch Clearing flags on attachment: 205600 Committed
r152169
: <
http://trac.webkit.org/changeset/152169
>
WebKit Commit Bot
Comment 6
2013-06-28 09:08:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug