[WinCairo] Compilation error. https://bugs.webkit.org/show_bug.cgi?id=118131

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-06-28
Reviewed by Brent Fulgham.

* Interfaces/IWebView.idl: Include needed accessibility interface.
* WebCoreSupport/WebChromeClient.cpp:
(WebChromeClient::AXFinishFrameLoad): Accessibility methods should not be inside FULLSCREEN_API ifdef.

Canonical link: https://commits.webkit.org/136224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152169 268f45cc-cd09-0410-ab3c-d52691b4dbfc